--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
       </div>
     </div>
 
+    <div class="card">
+  <div class="info-box">
+    <h3>📍 Phase de test - Territoire limité</h3>
+    <p>Actuellement, cette plateforme est en test sur la région <strong>Grand Est</strong> (54, 55, 57, 88).</p>
+    <p><strong>Vous exercez dans un autre département ?</strong> Vous pouvez vous inscrire, mais la plateforme n'est pas encore diffusée sur votre territoire.</p>
+  </div>
+</div>
+
     <!-- === SECTIONS SUIVANTES === -->
     <div class="card">
       <h2 style="margin:0 0 24px;font-size:22px;color:#0f1724;font-weight:700">À quoi sert cette plateforme ?</h2>
