--- a/formulaire.html
+++ b/formulaire.html
@@ -943,6 +943,7 @@ departSelect.addEventListener('change', e => {
 });
 
 /* ========== SUBMIT FORM ========== */
+/* ========== SUBMIT FORM ========== */
 submitBtn.addEventListener('click', async () => {
   // Réinitialiser les messages
   submitMsg.textContent = "";
