--- a/formulaire.html
+++ b/formulaire.html
@@ -1222,16 +1222,7 @@ function ouvrirVisualisation(e) {
     }
   }
 
-let url = `visualisation.html?dep=${encodeURIComponent(codeDept)}&commune=${encodeURIComponent(commune)}`;
-
-if (DEPS_METRO.includes(codeDept)) {
-  const tempsValue = document.getElementById("tempsTrajet").value;
-  url += `&temps=${encodeURIComponent(tempsValue)}`;
-} else if (DEPS_DOMTOM.includes(codeDept)) {
-  const rayonValue = document.getElementById("rayonKm").value;
-  url += `&rayon=${encodeURIComponent(rayonValue)}`;
-}
-
+const url = `visualisation.html?dep=${encodeURIComponent(codeDept)}&commune=${encodeURIComponent(commune)}&rayonOuTemps=${encodeURIComponent(rayonOuTemps)}`;
 window.open(url, "_blank");
 
 
