--- a/visualisation.html
+++ b/visualisation.html
@@ -197,8 +197,13 @@
           <option value="">-- Sélectionnez --</option>
           <option value="15">15 min</option>
           <option value="20">20 min</option>
+          <option value="20">25 min</option>
           <option value="30">30 min</option>
-          <option value="45">45 min</option>
+          <option value="30">35 min</option>
+          <option value="30">40 min</option>
+          <option value="30">45 min</option>
+          <option value="45">50 min</option>
+          <option value="45">55 min</option>
           <option value="60">60 min</option>
         </select>
       </div>
@@ -212,7 +217,9 @@
           <option value="20">20 km</option>
           <option value="25">25 km</option>
           <option value="30">30 km</option>
+          <option value="30">35 km</option>
           <option value="40">40 km</option>
+          <option value="40">45 km</option>
           <option value="50">50 km</option>
           <option value="Tout mon département">Tout mon département</option>
         </select>
@@ -569,6 +576,11 @@ window.addEventListener("load", preRemplirDepuisURL);
 
 </body>
 </html>
+
+
+
+
+
 
 
 
