--- a/visualisation.html
+++ b/visualisation.html
@@ -246,7 +246,7 @@
 <script>
 const ORS_API_KEY = 'eyJvcmciOiI1YjNjZTM1OTc4NTExMTAwMDFjZjYyNDgiLCJpZCI6ImYyNjcyNmMzZTU3YTQyNzk4Y2UxYzMxZmQ2YTZhYzZjIiwiaCI6Im11cm11cjY0In0=';
 const DEPT_API = "https://geo.api.gouv.fr/departements";
-const COMMUNE_API = code => `https://geo.api.gouv.fr/departements/${code}/communes?fields=nom,centre`;
+const COMMUNE_API = code => `https://geo.api.gouv.fr/departements/${code}/communes?fields=nom,centre,contour`;
 
 const DEPS_METRO = ['01','02','03','04','05','06','07','08','09','10','11','12','13','14','15','16','17','18','19','21','22','23','24','25','26','27','28','29','2A','2B','30','31','32','33','34','35','36','37','38','39','40','41','42','43','44','45','46','47','48','49','50','51','52','53','54','55','56','57','58','59','60','61','62','63','64','65','66','67','68','69','70','71','72','73','74','75','76','77','78','79','80','81','82','83','84','85','86','87','88','89','90','91','92','93','94','95'];
 const DEPS_DOMTOM = ['971','972','973','974','976'];
@@ -376,6 +376,36 @@ async function calculerIsochrone(lon, lat, minutes) {
     console.error('Erreur calcul isochrone:', error);
     throw error;
   }
+} 
+
+// ==========================
+//  FONCTION : Générer 5 points de test pour une commune
+// ==========================
+function genererPointsTest(commune) {
+  const centre = commune.centre.coordinates;
+  const points = [
+    L.latLng(centre[1], centre[0]) // Point central
+  ];
+  
+  // Si on a le contour, calculer les 4 coins de la bounding box
+  if (commune.contour && commune.contour.coordinates) {
+    const coords = commune.contour.coordinates[0];
+    const lats = coords.map(c => c[1]);
+    const lngs = coords.map(c => c[0]);
+    
+    const minLat = Math.min(...lats);
+    const maxLat = Math.max(...lats);
+    const minLng = Math.min(...lngs);
+    const maxLng = Math.max(...lngs);
+    
+    // Ajouter les 4 coins
+    points.push(L.latLng(minLat, minLng)); // Coin bas-gauche
+    points.push(L.latLng(minLat, maxLng)); // Coin bas-droite
+    points.push(L.latLng(maxLat, minLng)); // Coin haut-gauche
+    points.push(L.latLng(maxLat, maxLng)); // Coin haut-droite
+  }
+  
+  return points;
 }
 
 // ==========================
